--- a/new 1 1 (1).html
+++ b/new 1 1 (1).html
@@ -40,12 +40,12 @@ margin-left: 40px;
           <button id="button">Alta viata</button>
            <br>
          <a href="cuprins.html">Cuprins</a>
-         <h1 id="nume class="whit-text">Nume: Popan</h1>
-         <h2 id="prenume class="whit-text"> Prenume: Andreea</h2>
+         <h1 id="nume" class="whit-text">Nume: Popan</h1>
+         <h2 id="prenume" class="whit-text"> Prenume: Andreea</h2>
          <h3 class="text">Email: Popan.Pe.Elena@student.utcluj.ro</h3>
          <h4 class="text">Asteptari legate de educatie: Sa ma dezvolt atat pe plan personal cat si pe plan profesional</h4>
          <h5 class="text">Poza|<br>
-         <img class="imaginea-mea" id="" src"   " width="325" height="300">
+         <img class="imaginea-mea" id="poza" src="641x334-00-60.jpg" width="325" height="300">
          <p id="annastere" class="p">2004</p>
   
 		 
